# camelot-ai-dj

./: .gitignore  README.md  package-lock.json  package.json  start.bat  start.ps1
sidecar/: analyzer.py  autopilot.py  check_db.py  library.py  main.py  mixing_engine.py  precache.py  profile_load.py  requirements.txt  techniques.py  test_analyzer.py  test_auto_start.py  test_autopilot.py  test_incremental_scan.py  test_integration.py  test_mixing.py  test_mixing_techniques.py  test_skip_logic.py  test_ws_e2e.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
stems/: README.md
ui/: index.html  ws-client.js
ui/components/: autopilot-feed.js  canvas.js  jog.js  knobs.js  library.js  theme.js  vu-meter.js
ui/styles/: theme.css
