[package]
name = "camelot-ai-dj"
version = "0.1.0"
description = "Autonomous AI DJ mixing app"
authors = ["Camelot"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-sidecar", "shell-execute", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true